# photo-server

./: .gitignore  Cargo.toml  README.md  index.html
src/: handlers.rs  main.rs
src/image/: mod.rs  palette.rs
