[package]
name = "photo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
image = "0.24.2"
serde = {version = "1.0.136", features = ["derive"] }
clap = { version = "3.1.13", features = ["derive"] }
shellexpand = "2.1.0"
rand = "0.8.5"
walkdir = "2.3.2"